# stork_os

./: .gitignore  Makefile  Readme.md  build.sh  ovmf  run.sh
kernel/: Cargo.toml  Makefile  i686-kernel.json  kernel_entry.asm  link.ld
kernel/.cargo/: config.toml
kernel/src/: boot.rs  gdt.rs  lib.rs  main.rs  structures.rs  task.rs  tss.rs
kernel/src/acpi/: acpi.rs  dsdt.rs  fadt.rs  madt.rs  mod.rs  rsdp.rs  sdt.rs
kernel/src/apic/: io.rs  ioapic.rs  lapic.rs  local.rs  mod.rs  regs.rs
kernel/src/cpu/: gdt.rs  interrupts.rs  io.rs  mod.rs  rtc.rs  tss.rs
kernel/src/data_types/: linked_list.rs
kernel/src/devices/: mod.rs
kernel/src/drivers/: cpu.rs  keyboard.rs  mod.rs  vga.rs
kernel/src/fs/: entry.rs  fat32.rs  fat32_driver.rs  fs2.rs  mod.rs  node.rs  vfs.rs  vfs_dir_entry.rs  vfs_directory_entry.rs  vsf_manager.rs
kernel/src/hardware/: idt.rs  isr.asm  isr.rs  mod.rs  port_io.rs
kernel/src/interrupts/: idt.rs  isr.rs  mod.rs  timer.rs
kernel/src/memory/: addr.rs  global_allocator.rs  heap.rs  memory_descriptor.rs  mod.rs  physical_page_allocator.rs  region.rs
kernel/src/pci/: class.rs  device.rs  device_manager.rs  mod.rs  pci_class.rs  pci_device.rs  pci_vendor.rs  vendor.rs
kernel/src/process/: id.rs  mod.rs  process.rs  scheduler.rs  spin.rs  switch.rs
kernel/src/registers/: cr3.rs  mod.rs  rdtsc.rs
kernel/src/storage/: ahci.rs  ahci_controller.rs  ahci_device.rs  manager.rs  mod.rs  storage_manager.rs
kernel/src/sync/: mutex.rs
kernel/src/sys/: mod.rs  syscalls.rs
kernel/src/tasks/: elf.rs  mod.rs  process.rs  scheduler.rs  (+2 more)
(+107 files in other folders)
