[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
strip = true
opt-level = "z"
lto = true

[dependencies]
bitflags = "1.0"
bit_field = "0.10.1"
bitfield-struct = "0.8.0"
